:books: added documentation for route transferMoney
